# bit-flipper-vst

./: Cargo.toml  README.md  build.rs  bundler.toml
.github/workflows/: build.yml
src/: buffer.rs  bus.rs  dc_block.rs  drop_files.rs  editor.rs  lib.rs  main.rs
src/editor/: core.rs  digit.rs  mode.rs  monitor.rs  theme.rs  ui.rs
src/editor/ui/: background.rs  background.wgsl  button.rs  button.wgsl  color_box.rs  color_box.wgsl  digit.rs  monitor.rs  monitor.wgsl  open_folder.rs  pipeline.rs  postprocess.rs  postprocess.wgsl  slider.rs  slider.wgsl  static_box.rs  static_box.wgsl  text.rs  texture.rs  warning.rs
src/model/: bits.rs  mod.rs  modes.rs
