cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "bit_flipper"
version = "0.2.0"
edition = "2024"
authors = ["_eyewave <89079979+eye-wave@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Bit manipulation distortion plugin."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
atomic_float = "0.1"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0", features = [
    "opengl",
] }
bytemuck = "1.23.0"
crossbeam = "0.8"
glow = "0.16"
image = { version = "0.25.6", default-features = false, features = ["png"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
pollster = "0.4.0"
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
wgpu = "25"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]

[workspace]
members = ["xtask"]
